[package]
name = "json_viewer"
version = "0.2.0"
edition = "2021"
description = "JSON Viewer"
authors = ["Vi+ <vitaliyy@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.26.2", features = ["crossterm"] }
tui-tree-widget = "0.19.0"
serde_json = "1.0.117"
crossterm = "0.27.0"
